add pending transaction mechanism for instant UI feedback
- implement background transaction sending in Rust backend
- add PendingTransaction state tracking with status updates
- create pendingTransactions store for frontend state management
- update Send.svelte to show immediate "Transaction Initiated" feedback
- add PendingTransactionItem component for pending tx display
- update History.svelte to show pending transactions at top
- add polling for pending transaction status updates
- refresh balance automatically when transactions complete

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -77,5 +77,8 @@ time = "0.3"
 chrono = "0.4"
 nonempty = "0.11"
 
+# UUID
+uuid = { version = "1.11", features = ["v4"] }
+
 [build-dependencies]
 tauri-build = { version = "2.0", features = [] }
